# local-coding-assistant

./: .env  .env.development  .env.example  .env.production  .env.test  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  LICENSE  README.md  llms.txt  main.py  pyproject.toml
config/: README.md  auto_model_policies.yaml  defaults.yaml  providers.default.yaml  sandbox_tools.yaml  tools.default.yaml  tools.local.yaml
config/modules/: external_tool_example.py
src/local_coding_assistant/: __init__.py
src/local_coding_assistant/agent/: __init__.py  agent_loop.py  langgraph_agent.py  llm_manager.py  llm_manager_v2.py
src/local_coding_assistant/cli/: main.py
src/local_coding_assistant/cli/commands/: __init__.py  config.py  list_tools.py  provider.py  run.py  sandbox.py  serve.py  tool.py
src/local_coding_assistant/config/: __init__.py  config_manager.py  defaults.yaml  env_loader.py  env_manager.py  loader.py  path_manager.py  providers.default.yaml  providers.yaml  schemas.py  tool_loader.py  tools.default.yaml  tools.local.yaml
src/local_coding_assistant/core/: __init__.py  app_context.py  assistant.py  bootstrap.py  dependencies.py  error_handler.py  exceptions.py  protocols.py
src/local_coding_assistant/prompt/: __init__.py  composer.py
src/local_coding_assistant/prompt/templates/agents/: default.jinja2  executor.jinja2  planner.jinja2
src/local_coding_assistant/prompt/templates/base/: agent_identity.jinja2  execution_rules.jinja2  system_core.jinja2
src/local_coding_assistant/prompt/templates/blocks/: constraints.jinja2  examples.jinja2  memories.jinja2  skills.jinja2  tools.jinja2
src/local_coding_assistant/prompt/templates/modes/: classic_tools.jinja2  reasoning_only.jinja2  sandbox_python.jinja2  sandbox_shell.jinja2
src/local_coding_assistant/providers/: __init__.py  base.py  compatible_drivers.py  exceptions.py  generic_provider.py  google_provider.py  local_provider.py  openrouter_provider.py  provider_manager.py  router.py
src/local_coding_assistant/runtime/: __init__.py  context_manager.py  runtime_manager.py  runtime_types.py  session.py
src/local_coding_assistant/sandbox/: Dockerfile  base.py  docker-entrypoint.sh  docker_sandbox.py  exceptions.py  manager.py  sandbox_types.py  security.py
src/local_coding_assistant/sandbox/guest/: agent.py  resource_tracker.py  session.py  tools_api.py
src/local_coding_assistant/tools/: __init__.py  base.py  builtin.py  statistics.py  tool_api_generator.py  tool_manager.py  tool_registry.py  tool_runtime.py  types.py
src/local_coding_assistant/tools/builtin_tools/: __init__.py  math_tools.py  ptc_tools.py
src/local_coding_assistant/tools/sandbox_tools/: __init__.py  compute_tools.py  file_tools.py  final_answer.py
src/local_coding_assistant/utils/: langgraph_utility.py  logging.py
tests/: conftest.py
tests/configs/: defaults.yaml  providers.local.yaml  tools.default.yaml
tests/data/: sandbox_code.py  sandbox_code_first.py  sandbox_code_second.py  sandbox_error_code.py  sandbox_final_answer_tool_call.py  test_session_debug.py  test_session_state.py
tests/e2e/: conftest.py  test_cli_commands.py  test_cli_run.py  test_config_commands.py  test_list_tools_command.py  test_provider_commands.py  test_run_command.py  test_serve_command.py  test_tool_commands.py
tests/integration/: README_OPENAI_TESTS.md  conftest.py  test_bootstrap.py  test_bootstrap_context.py  test_cli_run_multiple.py  test_cli_sandbox.py  test_config_integration.py  test_config_manager_integration.py  test_docker_sandbox_execution.py  test_end_to_end_reasoning.py  test_env_refactor.py  test_execution_mode_flow.py  test_langgraph_compatibility.py  test_langgraph_integration.py  test_llm_call_with_manager.py  test_openai_integration.py  test_path_manager_integration.py  test_provider_integration.py  test_provider_manager_integration.py  test_provider_router_integration.py  test_runtime_tool_pipeline.py  test_runtime_workflow.py  test_sandbox_bootstrap.py  test_sandbox_manager_integration.py  test_tool_integration.py
tests/unit/: test_error_handler.py  test_exceptions.py  test_imports.py  test_logging_setup.py
tests/unit/agent/: test_agent_loop.py  test_langgraph_agent.py  test_llm_manager.py  test_llm_manager_compatibility.py  test_llm_manager_provider_integration.py  test_llm_manager_v2.py  test_llm_overrides.py
tests/unit/cli/: test_config_commands.py  test_list_tools_commands.py  test_provider_commands.py  test_run_commands.py  test_tool_commands.py
tests/unit/config/: __init__.py  test_config.py  test_config_manager.py  test_env_loader.py  test_env_manager.py  test_path_manager.py  test_tool_loader.py
tests/unit/core/: test_app_context.py  test_bootstrap.py  test_dependencies.py  test_protocols.py
tests/unit/core/bootstrap/: __init__.py  conftest.py  test_error_handling.py  test_initialization.py
tests/unit/prompt/: __init__.py  conftest.py  mocks.py  test_composer.py
tests/unit/providers/: test_base.py  test_compatible_drivers.py  test_providers.py  test_router.py
tests/unit/runtime/: conftest.py  test_context_manager.py  test_runtime_manager.py
tests/unit/sandbox/: test_docker_sandbox.py
tests/unit/sandbox/docker_sandbox/: __init__.py  test_container_management.py  test_execution.py  test_image_management.py  test_initialization.py  test_paths_and_config.py
tests/unit/tools/: test_math_tools.py  test_statistics.py  test_tool_api_generator.py  test_tool_input_transformer.py  test_tool_manager.py  test_tool_manager_sandbox.py  test_tool_registry.py  test_tool_runtime.py  test_tool_runtime_internal.py  test_tools_registry.py  tool_test_helpers.py
tests/unit/utils/: conftest.py  test_golden_logging.py  test_logging.py
tests/unit/utils/golden/: test_request_logging_golden.golden
tmp/: tmp7de8kv67.yaml  tmpghcku4gg.yaml  tmphmfafx3l.yaml  tmpht2uyijt.yaml  tmpo91giwmq.yaml  tmpqkvlweub.yaml  tmpvzbol1xs.yaml  tmpx1ok023_.yaml
tmp/tmpaol5m9jr/: test.yaml
tmp/tmpfrz7_hrn/config/: providers.yaml
tmp/tmph49hwjvr/: test.yaml
tmp/tmpvga_0sd5/: test.yaml
(+6 files in other folders)
