[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-coding-assistant"
version = "0.1.0"
description = "An AI-powered local coding assistant with plugin support"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "NenoLich", email = "ne0fun907@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Software Development",
]
dependencies = [
    # Core dependencies will be added here
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "ty>=0.2.0",
    "pre-commit>=3.7.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[project.scripts]
local-assistant = "local_coding_assistant.cli:main"

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "W503",  # line break before binary operator (black style)
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=local_assistant --cov-report=term-missing"

[coverage.run]
source = ["src"]
omit = ["tests/*"]

[coverage.report]
show_missing = true
skip_covered = true

[tool.ty]
python-version = "3.12"
strict = true
warn-unused-ignores = true
warn-unreachable = true
