[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[project]
name = "local-coding-assistant"
version = "0.1.0"
description = "An AI-powered local coding assistant with plugin support"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "NenoLich", email = "ne0fun907@gmail.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.0",
    "typer>=0.19.2",
    "python-dotenv>=1.0.0",
    "openai>=2.3.0",
    "langgraph>=1.0.0a4",
]

[project.scripts]
locca = "local_coding_assistant.cli.main:main"

[tool.taskipy.tasks]
test-unit = "pytest -v -s -x tests/unit"
test-integration = "pytest -v -s -x tests/integration"
test-e2e = "pytest -v -s -x tests/e2e"
test-all = "pytest -v -s -x tests"

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "A",  # Base rules
    "UP", "N", "Q", "RUF",    # Additional rules
    "C90", "S", "T20", "PT",  # Complexity, security, print statements, pytest
]
ignore = [
    "E501",  # Line length (handled by ruff format)
    "S101",  # Allow `assert` in tests
    "T201",  # Allow `print` in tests
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "T201"]  # Ignore assert/print in tests

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["local_coding_assistant"]

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
asyncio_mode = "auto"
# addopts = "-v --cov=local_coding_assistant --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

[coverage.run]
source = ["src"]
omit = ["tests/*"]

[coverage.report]
show_missing = true
skip_covered = true

[dependency-groups]
# Modern PEP 735 format - recommended for new projects
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
    "ty>=0.0.1a20",
    "pre-commit>=4.3.0",
    "taskipy>=1.14.1",
    "pyupgrade>=3.21.0",
    "pytest-asyncio>=1.3.0",
]
